--- a/static/styles/image_upload_widget.css
+++ b/static/styles/image_upload_widget.css
@@ -106,7 +106,7 @@
     position: relative;
 
     .inline-block {
-        margin: 5px 20px 0 0;
+        margin: 0.3125rem 1.25rem 0 0;
         vertical-align: top;
         border-radius: 4px;
     }
@@ -137,15 +137,15 @@
     .image_upload_spinner {
         top: 40%;
         right: 40%;
-        width: 50px;
-        height: 50px;
+        width: 3.125rem;
+        height: 3.125rem;
     }
 
     .image-block {
         border-radius: 5px;
         box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
-        width: 200px;
-        height: 200px;
+        width: 12.5rem;
+        height: 12.5rem;
         top: 0;
     }
 }
@@ -161,8 +161,8 @@
 
 /* CSS related to settings page realm icon upload widget only */
 #realm-icon-upload-widget {
-    width: 100px;
-    height: 100px;
+    width: 6.25rem;
+    height: 6.25rem;
     border-radius: 5px;
     box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
 
@@ -177,8 +177,8 @@
     }
 
     .image_upload_spinner {
-        width: 40px;
-        height: 40px;
+        width: 2.5rem;
+        height: 2.5rem;
         top: 30%;
         right: 30%;
     }
@@ -186,17 +186,17 @@
 
 .realm-icon-section {
     float: none;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
     display: inline-block;
 }
 
 /* CSS related to settings page realm day/night logo upload widget only */
 #realm-day-logo-upload-widget,
 #realm-night-logo-upload-widget {
-    width: 220px;
-    height: 55px;
+    width: 13.75rem;
+    height: 3.4375rem;
     text-align: center;
-    margin: 0 80px 0 20px;
+    margin: 0 5.0rem 0 1.25rem;
 
     .image-upload-text,
     .image-delete-text {
@@ -209,8 +209,8 @@
     }
 
     .image_upload_spinner {
-        width: 45px;
-        height: 55px;
+        width: 2.8125rem;
+        height: 3.4375rem;
         top: 5%;
         right: 40%;
     }
@@ -225,7 +225,7 @@
 }
 
 .realm-logo-section {
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
 }
 
 .realm-logo-block {
