--- a/static/styles/app_components.css
+++ b/static/styles/app_components.css
@@ -53,7 +53,7 @@
     .button {
         padding: 0.4375rem 0.875rem;
         margin: 0;
-        min-width: 130px;
+        min-width: 8.125rem;
 
         font-weight: 400;
         line-height: normal;
@@ -94,7 +94,7 @@
         }
 
         &.standalone {
-            margin-top: 10px;
+            margin-top: 0.625rem;
         }
 
         &.small {
@@ -195,13 +195,13 @@
 
     .tab-switcher {
         font-weight: initial;
-        margin: 2px 4px;
+        margin: 0.125rem 0.25rem;
         display: inline-block;
 
         .ind-tab {
             display: inline-block;
-            width: 90px;
-            margin: 0 -0.5px;
+            width: 5.625rem;
+            margin: 0 -0.0.3125rem;
             text-align: center;
             text-overflow: ellipsis;
             white-space: nowrap;
@@ -352,7 +352,7 @@
         z-index: 5;
 
         .user_status_overlay & {
-            margin-left: -26px;
+            margin-left: -1.625rem;
             right: 0;
             padding-top: 0.375rem;
         }
@@ -394,8 +394,8 @@
     /* Override Bootstrap's responsive grid to display input at full width */
     .input-append .stream-list-filter {
         /* Input width = 100% - 10px margin x2 - 6px padding x2 - 1px border x2. */
-        width: calc(100% - 34px);
-        margin-left: 10px;
+        width: calc(100% - 2.125rem);
+        margin-left: 0.625rem;
     }
 }
 
@@ -404,14 +404,14 @@
     box-shadow: inset 0 2px 1px -2px hsl(0, 0%, 20%),
         inset 2px 0 1px -2px hsl(0, 0%, 20%),
         inset 0 -2px 1px -2px hsl(0, 0%, 20%);
-    width: 10px;
+    width: 0.625rem;
     border-radius: 3px 0 0 3px;
     border-bottom: 0;
 }
 
 .stream_header_colorblock {
     @extend .stream-selection-header-colorblock;
-    margin-bottom: 5px;
+    margin-bottom: 0.3125rem;
     z-index: 1000;
 }
 
@@ -420,7 +420,7 @@
     font-size: 0.9em;
     -webkit-text-stroke: 0.05em;
     position: relative;
-    margin: 0 5px;
+    margin: 0 0.3125rem;
     top: 9px;
 }
 
@@ -428,18 +428,18 @@
 .loading_indicator_spinner {
     /* If you change these, make sure to adjust the constants in
        loading.make_indicator as well */
-    height: 38px;
-    width: 38px;
+    height: 2.375rem;
+    width: 2.375rem;
     float: left;
 }
 
 .loading_indicator_text {
     /* If you change these, make sure to adjust the constants in
        loading.make_indicator as well */
-    margin-left: 5px;
+    margin-left: 0.3125rem;
     font-size: 1.2em;
     font-weight: 300;
-    line-height: 38px;
+    line-height: 2.375rem;
 }
 
 .upgrade-tip {
@@ -464,14 +464,14 @@
     border: 1px solid hsl(49, 20%, 84%);
     border-radius: 4px;
     padding: 0.625rem;
-    margin: 10px 0;
+    margin: 0.625rem 0;
     font-size: 1rem;
     line-height: 1.5;
     color: hsl(0, 0%, 40%);
 
     &::before {
         display: inline;
-        margin-right: 8px;
+        margin-right: 0.5rem;
 
         font-family: FontAwesome, Yantramanav, "Source Sans Pro";
         font-weight: 600;
