--- a/static/styles/components.css
+++ b/static/styles/components.css
@@ -19,9 +19,9 @@
                 top: -2px;
 
                 padding: 0.125rem;
-                margin: 0 5px 0 0;
-                height: 10px;
-                width: 10px;
+                margin: 0 0.3125rem 0 0;
+                height: 0.625rem;
+                width: 0.625rem;
 
                 font-weight: 300;
                 line-height: 0.8;
@@ -82,7 +82,7 @@ a.no-underline:hover {
         transition: width 0.2s ease 1s;
 
         &.simplebar-hover {
-            width: 15px;
+            width: 0.9375rem;
             transition: width 0.2s ease;
         }
     }
@@ -91,7 +91,7 @@ a.no-underline:hover {
         transition: height 0.2s ease 1s;
 
         &.simplebar-hover {
-            height: 15px;
+            height: 0.9375rem;
             transition: height 0.2s ease;
         }
 
@@ -99,7 +99,7 @@ a.no-underline:hover {
             transition: height 0.2s ease 1s;
 
             &.simplebar-hover {
-                height: 11px;
+                height: 0.6875rem;
                 transition: height 0.2s ease;
             }
         }
