--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -47,8 +47,8 @@
     transition: background-color 200ms linear;
 
     padding: 0.5rem 0.625rem 0.5rem 0.625rem;
-    margin-left: 250px;
-    margin-right: 250px;
+    margin-left: 15.625rem;
+    margin-right: 15.625rem;
     position: relative;
 
     border-left: 1px solid hsl(0, 0%, 93%);
@@ -56,7 +56,7 @@
 }
 
 .ztable_comp_col1 {
-    width: 10px;
+    width: 0.625rem;
 }
 
 .message_comp {
@@ -91,13 +91,13 @@
             font-size: 0.9em;
             -webkit-text-stroke: 0.05em;
             position: relative;
-            margin: 0 5px;
+            margin: 0 0.3125rem;
         }
     }
 
     .pm_recipient {
-        margin-left: 5px;
-        margin-right: 20px;
+        margin-left: 0.3125rem;
+        margin-right: 1.25rem;
         display: flex;
         width: 100%;
     }
@@ -128,7 +128,7 @@
 
     .message-control-link {
         position: relative;
-        margin-right: 5px;
+        margin-right: 0.3125rem;
         top: 2px;
     }
 }
@@ -152,7 +152,7 @@
 
 #below-compose-content {
     width: 100%;
-    margin-top: 6px;
+    margin-top: 0.375rem;
 }
 
 #compose {
@@ -168,7 +168,7 @@
 #compose-container {
     width: 100%;
     /* This should match the value for .app-main */
-    max-width: 1400px;
+    max-width: 87.5rem;
     margin: auto;
 }
 
@@ -181,7 +181,7 @@
 #compose_invite_users,
 #compose_private_stream_alert {
     /* Don't overlap into the compose_close × */
-    margin-right: 10px;
+    margin-right: 0.625rem;
 }
 
 .compose_invite_user,
@@ -203,9 +203,9 @@
 .compose_invite_close,
 .compose_private_stream_alert_close {
     display: inline-block;
-    margin-top: 4px;
+    margin-top: 0.25rem;
 
-    width: 10px;
+    width: 0.625rem;
 }
 
 .compose-all-everyone-controls,
@@ -220,31 +220,31 @@
 .compose_not_subscribed p {
     margin: 0;
     display: inline-block;
-    max-width: calc(100% - 100px);
+    max-width: calc(100% - 6.25rem);
 }
 
 #error-message-sub-button {
-    margin-right: 30px;
+    margin-right: 1.875rem;
 }
 
 /* Like .nav-tabs > li > a */
 div[id^="message-edit-send-status"],
 #compose-send-status {
     padding: 0.5rem 0.875rem 0.5rem 0.875rem;
-    margin-bottom: 8px;
-    line-height: 20px;
+    margin-bottom: 0.5rem;
+    line-height: 1.25rem;
     display: none;
 }
 
 #compose-send-status .progress {
-    height: 10px;
-    margin-bottom: 10px;
+    height: 0.625rem;
+    margin-bottom: 0.625rem;
 }
 
 #nonexistent_stream_reply_error {
     padding: 0.5rem 0.875rem 0.5rem 0.875rem;
-    margin-bottom: 8px;
-    line-height: 20px;
+    margin-bottom: 0.5rem;
+    line-height: 1.25rem;
     display: none;
 }
 
@@ -267,7 +267,7 @@ div[id^="message-edit-send-status"],
 
 #out-of-view-notification {
     position: relative;
-    margin-bottom: 6px;
+    margin-bottom: 0.375rem;
 
     background-color: hsla(152, 51%, 63%, 0.25);
     border: 1px solid hsla(0, 0%, 0%, 0.1);
@@ -296,13 +296,13 @@ div[id^="message-edit-send-status"],
 
 textarea.new_message_textarea {
     display: table-cell;
-    width: calc(100% - 12px);
+    width: calc(100% - 0.75rem);
     padding: 0.3125rem;
     height: 1.5em;
     max-height: 22em;
     margin-bottom: 0;
     resize: vertical !important;
-    margin-top: 5px;
+    margin-top: 0.3125rem;
 }
 
 textarea.new_message_textarea,
@@ -327,7 +327,7 @@ input.recipient_box {
     width: 20%;
     border-radius: 0 3px 3px 0;
     border-left: 0;
-    min-width: 120px;
+    min-width: 7.5rem;
 
     &:focus {
         border-left: none;
@@ -339,9 +339,9 @@ input.recipient_box {
 }
 
 #stream_message_recipient_topic.recipient_box {
-    width: calc(20% + 14px);
-    min-width: 140px;
-    max-width: 165px;
+    width: calc(20% + 0.875rem);
+    min-width: 8.75rem;
+    max-width: 10.3125rem;
 }
 
 #private_message_recipient.recipient_box {
@@ -377,7 +377,7 @@ input.recipient_box {
 
     .compose_checkbox_label {
         color: hsl(0, 0%, 67%);
-        margin: 4px;
+        margin: 0.25rem;
     }
 }
 
@@ -403,9 +403,9 @@ a.message-control-button {
     color: inherit;
     text-decoration: none;
     font-size: 0.875rem;
-    width: 14px;
-    height: 14px;
-    margin-right: 8px;
+    width: 0.875rem;
+    height: 0.875rem;
+    margin-right: 0.5rem;
     padding-top: 0.3125rem;
     text-align: center;
     float: left;
@@ -417,7 +417,7 @@ a.message-control-button {
 
 .drag {
     display: none;
-    height: 18px;
+    height: 1.125rem;
     width: 100%;
     top: 23px;
     position: relative;
@@ -426,22 +426,22 @@ a.message-control-button {
 
 #enter_sends {
     vertical-align: middle;
-    margin-top: -2px;
-    margin-right: 4px;
+    margin-top: -0.125rem;
+    margin-right: 0.25rem;
 }
 
 .inline-subscribe-error {
-    margin-left: 5px;
+    margin-left: 0.3125rem;
 }
 
 .preview_message_area {
     /* minus 5px padding. */
-    width: calc(100% - 12px);
+    width: calc(100% - 0.75rem);
     padding: 0.3125rem;
     /* the maximum height the textarea gets to. */
-    max-height: 308px;
+    max-height: 19.25rem;
     /* the minimum height the textarea collapses to. */
-    min-height: 36px;
+    min-height: 2.25rem;
     overflow: auto;
 
     border: 1px solid hsl(0, 0%, 67%);
@@ -451,8 +451,8 @@ a.message-control-button {
 }
 
 #preview_message_area {
-    margin-top: 5px;
-    min-height: 42px;
+    margin-top: 0.3125rem;
+    min-height: 2.625rem;
 }
 
 a#undo_markdown_preview {
@@ -493,20 +493,20 @@ a#undo_markdown_preview {
 
 .compose_mobile_stream_button i,
 .compose_mobile_private_button i {
-    margin-right: 4px;
+    margin-right: 0.25rem;
 }
 
 /* This max-width must be synced with message_viewport.is_narrow */
 @media (max-width: 1165px) {
     .compose-content {
-        margin-right: 7px;
+        margin-right: 0.4375rem;
     }
 }
 
 @media (max-width: 775px) {
     .compose-content {
-        margin-right: 7px;
-        margin-left: 7px;
+        margin-right: 0.4375rem;
+        margin-left: 0.4375rem;
     }
 }
 
@@ -518,19 +518,19 @@ a#undo_markdown_preview {
     }
 
     textarea.new_message_textarea {
-        height: 30px !important;
-        min-height: 30px !important;
+        height: 1.875rem !important;
+        min-height: 1.875rem !important;
     }
 }
 
 @media (max-width: 370px) {
     #stream_message_recipient_topic.recipient_box {
-        width: calc(100% - 175px);
-        min-width: 95px;
+        width: calc(100% - 10.9375rem);
+        min-width: 5.9375rem;
     }
 
     .compose-content {
-        margin-right: 5px;
-        margin-left: 5px;
+        margin-right: 0.3125rem;
+        margin-left: 0.3125rem;
     }
 }
