--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -45,7 +45,7 @@ $topic_indent: calc($far_left_gutter_size + $left_col_size + 4px);
 #stream_filters,
 #global_filters {
     font-size: 0.875rem;
-    margin-right: 12px;
+    margin-right: 0.75rem;
 }
 
 li.show-more-topics {
@@ -59,8 +59,8 @@ li.show-more-topics {
     float: right;
     opacity: 0.5;
     font-size: 0.8125rem;
-    margin-top: 3px;
-    margin-left: 10px;
+    margin-top: 0.1875rem;
+    margin-left: 0.625rem;
 
     &:hover {
         opacity: 1;
@@ -69,7 +69,7 @@ li.show-more-topics {
 }
 
 #streams_inline_cog {
-    margin-right: 10px;
+    margin-right: 0.625rem;
 }
 
 .tooltip {
@@ -78,8 +78,8 @@ li.show-more-topics {
 
 #stream_filters {
     overflow: visible;
-    margin-bottom: 10px;
-    margin-right: 12px;
+    margin-bottom: 0.625rem;
+    margin-right: 0.75rem;
     padding: 0;
     font-weight: normal;
 
@@ -101,12 +101,12 @@ li.show-more-topics {
     }
 
     .count {
-        margin-right: 15px;
+        margin-right: 0.9375rem;
     }
 
     .subscription_block {
         padding: 0;
-        margin-right: 25px;
+        margin-right: 1.5625rem;
         margin-left: $far_left_gutter_size;
         display: flex;
         justify-content: space-between;
@@ -131,7 +131,7 @@ li.show-more-topics {
         }
 
         &.stream-with-count {
-            margin-right: 15px;
+            margin-right: 0.9375rem;
         }
     }
 
@@ -141,9 +141,9 @@ li.show-more-topics {
 }
 
 .narrows_panel {
-    margin-bottom: 4px;
+    margin-bottom: 0.25rem;
     li a {
-        margin-top: 1px;
+        margin-top: 0.0625rem;
         &:hover {
             text-decoration: none;
         }
@@ -160,7 +160,7 @@ li.show-more-topics {
 }
 
 #private-container {
-    max-height: 200px;
+    max-height: 12.5rem;
 }
 
 :not(.active-sub-filter) {
@@ -174,10 +174,10 @@ li.show-more-topics {
 
 #add-stream-link {
     text-decoration: none;
-    margin-left: 10px;
-    margin-bottom: 18px;
+    margin-left: 0.625rem;
+    margin-bottom: 1.125rem;
     i {
-        min-width: 19px;
+        min-width: 1.1875rem;
         text-align: center;
         &::before {
             padding-right: 0.1875rem;
@@ -194,8 +194,8 @@ ul.filters {
     }
 
     hr {
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 0.625rem;
+        margin-bottom: 0.625rem;
     }
 
     li.muted_topic,
@@ -226,7 +226,7 @@ li.active-sub-filter {
 }
 
 #global_filters {
-    margin-bottom: 16px;
+    margin-bottom: 1.0rem;
 
     .filter-icon {
         display: inline-block;
@@ -235,8 +235,8 @@ li.active-sub-filter {
     }
 
     .count {
-        margin-right: 20px;
-        margin-top: 2px;
+        margin-right: 1.25rem;
+        margin-top: 0.125rem;
         display: none;
     }
 
@@ -303,8 +303,8 @@ li.top_left_recent_topics {
 .private_message_count {
     float: right;
     padding: 0 0.25rem;
-    height: 16px;
-    line-height: 16px;
+    height: 1.0rem;
+    line-height: 1.0rem;
     font-size: 0.75rem;
     font-weight: normal;
     letter-spacing: 0.6px;
@@ -334,13 +334,13 @@ li.top_left_recent_topics {
 
 .topic-box {
     padding-left: 0.3125rem;
-    margin-right: 30px;
+    margin-right: 1.875rem;
 }
 
 .conversation-partners,
 .topic-name {
     display: block;
-    width: calc(100% - 5px);
+    width: calc(100% - 0.3125rem);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -367,7 +367,7 @@ li.top_left_recent_topics {
     i {
         padding-right: 0.25em;
         display: inline-block;
-        width: 13px;
+        width: 0.8125rem;
         vertical-align: middle;
     }
 
@@ -432,7 +432,7 @@ ul.expanded_private_messages {
     font-weight: 400;
     margin-left: 0;
     padding-bottom: 0.125rem;
-    margin-top: 3px;
+    margin-top: 0.1875rem;
 }
 
 li.topic-list-item {
@@ -446,7 +446,7 @@ li.expanded_private_message {
     padding-bottom: 0.0625rem;
 
     a {
-        margin: 1px 0;
+        margin: 0.0625rem 0;
     }
 }
 
@@ -469,15 +469,15 @@ li.expanded_private_message {
 }
 
 .pm-box {
-    margin-right: 20px;
+    margin-right: 1.25rem;
     align-items: center;
 
     .user_circle {
-        min-width: 8px;
-        height: 8px;
+        min-width: 0.5rem;
+        height: 0.5rem;
         margin-top: 0;
         margin-bottom: 0;
-        margin-left: 2px;
+        margin-left: 0.125rem;
         position: relative;
         top: 0;
     }
@@ -486,7 +486,7 @@ li.expanded_private_message {
 .zero-pm-unreads .pm-box,
 .zero-topic-unreads .more-topics-box,
 .zero-topic-unreads .topic-box {
-    margin-right: 15px;
+    margin-right: 0.9375rem;
 }
 
 .zoom-out {
@@ -496,14 +496,14 @@ li.expanded_private_message {
 }
 
 #topics_header {
-    margin-right: 10px;
+    margin-right: 0.625rem;
     color: hsl(0, 0%, 43%);
     a {
         color: inherit;
         text-decoration: none;
         text-transform: uppercase;
         i {
-            margin: 0 5px 0 10px;
+            margin: 0 0.3125rem 0 0.625rem;
             position: relative;
             top: 1px;
         }
@@ -514,7 +514,7 @@ li.expanded_private_message {
     margin-right: 0;
     padding-left: $far_left_gutter_size;
     cursor: pointer;
-    margin-top: 3px;
+    margin-top: 0.1875rem;
 }
 
 .zero_count {
@@ -522,8 +522,8 @@ li.expanded_private_message {
 }
 
 .searching-for-more-topics img {
-    height: 16px;
-    margin-left: 6px;
+    height: 1.0rem;
+    margin-left: 0.375rem;
 }
 
 .zoom-in {
