--- a/static/styles/reactions.css
+++ b/static/styles/reactions.css
@@ -8,7 +8,7 @@
         float: left;
         margin: 0.15em;
         padding: 0 0.125rem 0 0;
-        height: 19px;
+        height: 1.1875rem;
         cursor: pointer;
         background-color: hsl(0, 0%, 100%);
         border: 1px solid hsl(194, 37%, 84%);
@@ -25,9 +25,9 @@
         + .reaction_button {
             visibility: hidden;
             pointer-events: none;
-            margin: 2px 0.1em 3px 0.1em;
+            margin: 0.125rem 0.1em 0.1875rem 0.1em;
             padding: 0.1875rem;
-            height: 14px;
+            height: 0.875rem;
             border-radius: 4px;
             padding-left: 0.3em;
             border: 1px solid hsl(0, 0%, 73%);
@@ -39,10 +39,10 @@
             display: inline-block;
             vertical-align: top;
             top: 0;
-            margin: 1px 3px;
+            margin: 0.0625rem 0.1875rem;
 
-            height: 17px;
-            width: 17px;
+            height: 1.0625rem;
+            width: 1.0625rem;
             position: relative;
         }
     }
@@ -54,7 +54,7 @@
         display: inline-block;
         vertical-align: top;
         color: hsl(200, 100%, 40%);
-        margin: 0 1px 0 0;
+        margin: 0 0.0625rem 0 0;
         line-height: 1em;
     }
 
@@ -73,7 +73,7 @@
     .reaction_button {
         i {
             font-size: 1em;
-            margin-right: 3px;
+            margin-right: 0.1875rem;
         }
 
         &:hover i {
@@ -95,7 +95,7 @@
         .message_reaction_count {
             font-size: 1.1em;
             color: hsl(0, 0%, 33%);
-            margin-left: 3px;
+            margin-left: 0.1875rem;
             top: 0.5px;
         }
 
@@ -123,7 +123,7 @@
 
 .emoji-info-popover {
     padding: 0;
-    height: 370px;
+    height: 23.125rem;
     user-select: none;
 
     .popover-content {
@@ -140,7 +140,7 @@
 
     .emoji-popover {
         display: block;
-        width: 250px;
+        width: 15.625rem;
 
         .reacted {
             background-color: hsl(195, 50%, 95%);
@@ -168,7 +168,7 @@
             .emoji-popover-filter {
                 margin: auto;
                 padding-left: 1.375rem;
-                width: calc(100% - 22px - 8px);
+                width: calc(100% - 1.375rem - 0.5rem);
                 font-size: 90%;
             }
         }
@@ -184,8 +184,8 @@
             .emoji-popover-tab-item {
                 display: inline-block;
                 padding-top: 0.5rem;
-                width: 25px;
-                height: 25px;
+                width: 1.5625rem;
+                height: 1.5625rem;
                 text-align: center;
                 font-size: 1rem;
                 cursor: pointer;
@@ -205,12 +205,12 @@
             overflow-x: hidden;
             overflow-y: auto;
             display: block;
-            width: 247px;
+            width: 15.4375rem;
             padding-left: 0.1875rem;
         }
 
         .emoji-search-results-container {
-            height: 283px;
+            height: 17.6875rem;
 
             .emoji-popover-results-heading {
                 font-weight: 600;
@@ -220,7 +220,7 @@
         }
 
         .emoji-popover-emoji-map {
-            height: 250px;
+            height: 15.625rem;
 
             .emoji-popover-subheading {
                 font-weight: 600;
@@ -234,8 +234,8 @@
             padding: 0.375rem;
             cursor: pointer;
             border-radius: 0.5em;
-            height: 25px;
-            width: 25px;
+            height: 1.5625rem;
+            width: 1.5625rem;
 
             &.reacted.reaction:focus {
                 background-color: hsl(195, 55%, 88%);
@@ -260,13 +260,13 @@
     .emoji-showcase-container {
         position: relative;
         background-color: hsl(0, 0%, 93%);
-        min-height: 44px;
-        width: 250px;
+        min-height: 2.75rem;
+        width: 15.625rem;
 
         .emoji-preview {
             position: absolute;
-            width: 32px;
-            height: 32px;
+            width: 2.0rem;
+            height: 2.0rem;
             left: 5px;
             top: 6px;
             margin-top: 0;
@@ -275,7 +275,7 @@
         .emoji-canonical-name {
             position: relative;
             top: 12px;
-            margin-left: 50px;
+            margin-left: 3.125rem;
             font-size: 1rem;
             font-weight: 600;
             white-space: nowrap;
@@ -291,7 +291,7 @@
     font-size: 0.8em;
     display: inline-block;
     vertical-align: top;
-    margin: 0 1px 0 0;
+    margin: 0 0.0625rem 0 0;
     line-height: 1em;
 }
 
