--- a/static/styles/widgets.css
+++ b/static/styles/widgets.css
@@ -27,11 +27,11 @@
 
     li {
         list-style: none;
-        margin: 2px 2px 2px 0;
+        margin: 0.125rem 0.125rem 0.125rem 0;
     }
 
     ul {
-        margin: 0 0 5px 0;
+        margin: 0 0 0.3125rem 0;
         padding: 0;
     }
 }
@@ -49,7 +49,7 @@
     .poll-vote {
         color: hsl(156, 41%, 40%);
         border-color: hsl(156, 28%, 70%);
-        margin-right: 4px;
+        margin-right: 0.25rem;
         background-color: hsl(0, 0%, 100%);
 
         &:hover {
@@ -60,11 +60,11 @@
 
 button {
     &.task {
-        height: 20px;
-        width: 20px;
+        height: 1.25rem;
+        width: 1.25rem;
         background-color: transparent;
         border-color: hsl(156, 28%, 70%);
-        margin-right: 4px;
+        margin-right: 0.25rem;
         border-radius: 3px;
 
         &:hover {
@@ -84,7 +84,7 @@ button {
         border-radius: 3px;
         border: 1px solid hsl(0, 0%, 80%);
         background-color: hsl(0, 0%, 100%);
-        width: 100px;
+        width: 6.25rem;
 
         &:hover {
             border-color: hsl(0, 0%, 60%);
@@ -93,7 +93,7 @@ button {
 }
 
 img.task-completed {
-    width: 15px;
+    width: 0.9375rem;
 }
 
 input,
@@ -103,7 +103,7 @@ button {
     &.poll-option,
     &.poll-question {
         padding: 0.25rem 0.375rem;
-        margin: 2px 0 2px 0;
+        margin: 0.125rem 0 0.125rem 0;
     }
 }
 
@@ -114,8 +114,8 @@ button {
 
 .poll-question-check,
 .poll-question-remove {
-    width: 28px !important;
-    height: 28px;
+    width: 1.75rem !important;
+    height: 1.75rem;
     border-radius: 3px;
     border: 1px solid hsl(0, 0%, 80%);
     background-color: hsl(0, 0%, 100%);
@@ -128,7 +128,7 @@ button {
 .poll-edit-question {
     opacity: 0.4;
     display: inline-block;
-    margin-left: 5px;
+    margin-left: 0.3125rem;
 
     &:hover {
         opacity: 1;
